# cpp_photo_editor

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
scripts/: auto-adjust.sh  gamma.sh  gaussian.sh
src/app/: CMakeLists.txt  main-window.ui  main.cpp  resources.c  resources.h  resources.xml  test.txt
src/app/assets/css/dark/: theme.css
src/app/assets/themes/dark/: theme.scss
src/app/classes/: file.cpp  file.h  icon.h
src/app/components/file-bar/: file-bar-label.h  file-bar.component.ui  file-bar.cpp  file-bar.h
src/app/components/image/: image.component.ui  image.cpp  image.h
src/app/components/menu/: _menu.component.scss  menu.component.ui
src/app/components/menu/file/: file.cpp  file.h
src/app/css/dark/: theme.css
src/app/global/: subjects.cpp  subjects.h
src/app/macros/: args.h  foreach-component.h  foreach.h
src/app/scripts/: create-resources.sh
src/app/themes/dark/: theme.scss
src/cli/: CMakeLists.txt  args.h  main.cpp
src/events/: CMakeLists.txt  debug.cpp  debug.h  events.h  observable.h  observer.h  subscriber.h  subscription.h  types.h
src/events/events/: event.h  mouse-event.h
src/events/internal/: consumer-observer.h  finalizer.cpp  finalizer.h  observable.h  observer.h  overload.h  subscriber.h  subscription.h  unsubscribable.h
src/events/internal/observable/: libsigc.h  timer.h
src/events/operators/: finalize.h  map.h  take.h  tap.h
src/events/subjects/: behavior-subject.h  subject.h
src/gui/: CMakeLists.txt  application.cpp  application.h  gui.h
src/gui/component/: component-data.cpp  component-data.h  component.cpp  component.h
src/gui/event/: interfaces.h
src/gui/window/: main-window.cpp  main-window.h  window.cpp  window.h
src/lib/: CMakeLists.txt  adjustments.h  draw.h  image.cpp  image.h  mask.h
src/lib/adjustments/: adjust.cpp  adjust.h  auto.cpp  auto.h  brightness.cpp  brightness.h  contrast.cpp  contrast.h  exposure.cpp  exposure.h  gamma.cpp  gamma.h  invert.cpp  invert.h  saturation.cpp  saturation.h  threshold.cpp  threshold.h  white-balance.cpp  white-balance.h
src/lib/color/: color.cpp  color.h  hsl.h  hsv.h  rgb.h
src/lib/draw/: draw.cpp  draw.h
src/lib/filters/: filter.cpp  filter.h  shapen.h  sharpen.cpp
src/lib/filters/blur/: box.cpp  box.h  gaussian.cpp  gaussian.h
src/lib/loaders/: loader.cpp  loader.h
src/lib/loaders/jpeg/: jpeg.cpp  jpeg.h
src/lib/loaders/png/: png.cpp  png.h
src/lib/loaders/raw/: raw.cpp  raw.h
src/lib/transforms/: transform.cpp  transform.h
